update and fix errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,11 @@ button {
     width: 1px;
 }
 
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 .container {
     width: 1158px;
     padding-left: 15px;
@@ -47,11 +52,13 @@ button {
 .container.header-wrap{
     display: flex;
     justify-content: space-between;
+
 }
 
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .header-nav {
@@ -121,8 +128,8 @@ button {
 }
 
 .hero-wrap {
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .hero-page {
@@ -164,8 +171,6 @@ button {
 }
 
 .features-list {
-    padding-top: 120px;
-    padding-bottom: 120px;
     display: flex;
     gap: 24px;
 
@@ -192,8 +197,6 @@ button {
 
 .team-section {
     background: #f4f4fd;
-    padding-top: 120px;
-    padding-bottom: 120px;
 }
 
 .team-section-title {
@@ -239,10 +242,7 @@ button {
     letter-spacing: 0.02em;
     text-align: center;
 }
-.portfolio-section {
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
+
 .portfolio-title {
     font-weight: 700;
     font-size: 36px;
@@ -271,15 +271,19 @@ button {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-top: 32px;
-    margin-bottom: 8px;
-    padding-left: 16px;
 }
 .portfolio-element-desc {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-left: 16px;
+}
+
+.portfolio-element-bottom {
+    border-top: 0;
+    border-right: 1px solid #e7e9fc;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    padding: 32px 16px;
 }
 
 .footer {
