fix checkout errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,14 +56,15 @@ button {
 }
 
 .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
+
     border-bottom: 1px solid #e7e9fc;
 }
 
 .header-nav {
     display: flex;
     align-items: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .logo-text {
@@ -105,15 +106,18 @@ button {
 .address-list {
     display: flex;
     gap: 40px;
-}
-
-.address-list-wrap {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     font-style: normal;
     margin-left: auto;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
+
+
+
+
 
 .address-link {
     color: #434455
@@ -127,13 +131,11 @@ button {
     color: #404bbf;
 }
 
-.hero-wrap {
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
 
-.hero-page {
+.section.hero-page {
     background-color: #2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .hero-page-title {
@@ -160,6 +162,9 @@ button {
     margin: 0 auto;
     padding: 16px 32px;
     border-radius: 4px;
+    min-width: 169px;
+    height: 56px;
+    border: none;
 }
 
 .order-service-button:hover {
@@ -182,7 +187,7 @@ button {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 .features-list-desc {
@@ -218,10 +223,11 @@ button {
 
 .team-member {
     background-color: #FFFFFF;
+}
+
+.team-member-info {
     border-radius: 0 0 4px 4px;
-    padding: 0px 0px 32px 0px;
-    width: 264px;
-    height: 380px;
+    padding: 32px 0;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
@@ -232,7 +238,6 @@ button {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 32px;
     margin-bottom: 8px;
 }
 
@@ -263,15 +268,17 @@ button {
 
 .portfolio-element {
     padding-bottom: 32px;
-    /* border: 1px solid #e7e9fc; */
 }
+
 .portfolio-element-subject {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
+
 .portfolio-element-desc {
     font-size: 16px;
     line-height: 1.5;
@@ -286,19 +293,21 @@ button {
     padding: 32px 16px;
 }
 
+
 .footer {
     background-color: #2e2f42;
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
 .footer-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd; 
     max-width: 264px;
-    padding-top: 16px;
 }
+
 .footer-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -306,8 +315,11 @@ button {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #4d5ae5;    
+    color: #4d5ae5;  
+    display: inline-block;
+    margin-bottom: 16px;
 }
+
 .footer-logo-accent {
     color: #f4f4fd;
 }
